<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".SettingsActivity" >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="64dp"
	    android:background="#021F4F"
	    android:gravity="top|center"
	    android:orientation="horizontal"
	    android:padding="10dp"
	    tools:context=".SettingsActivity" >
	
	    <Button
	        android:id="@+id/voice_settings"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginRight="24dp"
	        android:layout_weight="1"
	        android:background="@drawable/roundedbutton_small"
	        android:text="Voice" />
	
	    <Button
	        android:id="@+id/home_settings"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginLeft="12dp"
	        android:layout_marginRight="12dp"
	        android:layout_weight="1"
	        android:background="@drawable/roundedbutton_small"
	        android:text="Home" />

	    <Button
	        android:id="@+id/remote_shortcut"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginLeft="24dp"
	        android:layout_weight="1"
	        android:background="@drawable/roundedbutton_small"
	        android:text="Remote" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical" >

			<Button
			    android:id="@+id/btn_recordings"
			    android:layout_width="fill_parent"
			    android:layout_height="64dp"
			    android:text="Settings"
			    android:textSize="36sp" />

			<TextView
			    android:id="@+id/tvText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="12dp"
			    android:layout_marginLeft="6dp"
			    android:layout_marginRight="6dp"
			    android:layout_marginTop="12dp"
			    android:text="@string/settings_intro"
			    android:textSize="18sp" />

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="6dp"
			    android:layout_marginRight="6dp"
			    android:text="@string/settings_gesture"
			    android:textSize="18sp" />

			<TextView
			    android:id="@+id/textView3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="6dp"
			    android:layout_marginRight="6dp"
			    android:layout_marginTop="12dp"
			    android:text="@string/settings_favorites"
			    android:textSize="18sp" />

		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="fill_parent"
		    android:background="@drawable/main_logo" >
		</LinearLayout>

	</LinearLayout>

</LinearLayout>